# Board-Game-Simulations

./: README.md  possible games to simulate.txt
exploding_kittens/: Cargo.toml
exploding_kittens/assets/: [Exploding Kittens] Algorithm Sketches.afdesign
exploding_kittens/src/: combos.rs  config.rs  display.rs  game.rs  helpers.rs  main.rs  nope.rs  notes.md  results.rs  simulator.rs  strats.rs  test.rs
halli_galli/: .Rhistory  halligalli.R
kakerlakenpoker/: kakerlakenpoker.R
mantis/: Cargo.toml
mantis/src/: config.rs  display.rs  game.rs  helpers.rs  main.rs  notes.md  results.rs  simulator.rs  strats.rs  test.rs
perudo/: Cargo.toml  to do for future.txt
perudo/src/: challenger.rs  config.rs  game.rs  guesser.rs  helpers.rs  helpers_unused.rs  main.rs  results.rs  simulator.rs
risk/: .RData  .Rhistory  Areas.dbf  Areas.shp  RISK.jmp  RISK_Visualization.R  build.xml  simulationResults-backup.r  simulationResults.r
risk/RISK/: Areas.dbf  Areas.shp  Image_1.dbf  Image_1.shp
risk/nbproject/: build-impl.xml  genfiles.properties  project.properties  project.xml
risk/src/statistics/: DataSet.java  ErlangDistribution.java  GammaDistribution.java  NegativeBinomialDistribution.java  PoissonDistribution.java  UniformDistribution.java
settlers_of_catan/: build.xml
settlers_of_catan/nbproject/: build-impl.xml  genfiles.properties  project.properties  project.xml
settlers_of_catan/src/settlersofcatan/: BackupCode.java  Board.java  Edge.java  Field.java  Frame.java  Painting.java  Player.java  (+4 more)
testing_rust/: Cargo.toml
testing_rust/src/: main.rs
(+18 files in other folders)
